Integration of sources - assignment 2

--- a/module2/assignment_module_2.ipynb
+++ b/module2/assignment_module_2.ipynb
@@ -1160,13 +1160,15 @@
    "source": [
     "## Convolutional Neural Network\n",
     "**Model 1**  \n",
-    "The idea is to implement a VGG-like architecture: a stack of stages that process activations at the same spatial resolution.  \n",
+    "The idea is to implement a [VGG](https://arxiv.org/abs/1409.1556)-like architecture: a stack of stages that process activations at the same spatial resolution.  \n",
     "Each stage is made of:\n",
     "- 3x3 convolution\n",
     "- Relu activation\n",
     "- 2x2 Maxpooling, with stride 2  \n",
     "\n",
-    "This architecture turned out to be very simple and effective: application of small kernel with a maxpooling operator that halves the spatial dimensions and doubles the channel dimension. After the feature extractor we put a 2 fully-connected layers classifier with 1024 neurons each. Let's start from this basic model and augment it in order to improve it's capacity and validation accuracy!"
+    "This architecture turned out to be very simple and effective: application of small kernel with a maxpooling operator that halves the spatial dimensions and doubles the channel dimension. After the feature extractor we put a 2 fully-connected layers classifier with 1024 neurons each. Let's start from this basic model and augment it in order to improve it's capacity and validation accuracy!  \n",
+    "\n",
+    "[Very Deep Convolutional Networks for Large-Scale Image Recognition](https://arxiv.org/abs/1409.1556)"
    ]
   },
   {
@@ -1329,6 +1331,9 @@
    },
    "source": [
     "## Dropout regularization\n",
+    "[Nitish Srivastava et al., “Dropout: A Simple Way to Prevent Neural Networks from Overfitting”, JMLR 2015.](https://jmlr.org/papers/v15/srivastava14a.html)  \n",
+    "\n",
+    "Randomly drop units (along with their connections) from the neural network during training, preventing units from co-adapting too much.  \n",
     "Let's apply dropout with p=0.5 to our fully connected layers."
    ]
   },
@@ -1496,8 +1501,10 @@
     "id": "2HhYaFY29adM"
    },
    "source": [
-    "## Global Average Pooling\n",
-    "Pytorch implements an adaptive average pooling operator, which allows us to deal with input images of arbitrary resolution."
+    "## Global Average Pooling  \n",
+    "[Lin et al., “Network in network”, ICLR 2014](https://arxiv.org/abs/1312.4400)  \n",
+    "\n",
+    "Pytorch implements an adaptive [average pooling operator](https://pytorch.org/docs/stable/generated/torch.nn.AdaptiveAvgPool2d.html), which allows us to deal with input images of arbitrary resolution."
    ]
   },
   {
@@ -1660,12 +1667,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Batch Normalization\n",
+    "[Accelerating Deep Network Training by Reducing Internal Covariate Shift](https://arxiv.org/abs/1502.03167)  \n",
+    "Solving the internal covariate shift (change in the distribution of each layer's input during training) by normalizing the layer's input along the batch dimension."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "4XCrCv2z9dXx"
    },
    "source": [
-    "## Batch Normalization\n",
-    "Let's add batch normalization to every convolutional layer. By looking at the literature, there are different school of thoughts on whether to put the batchnorm layer **before** or **after** the relu.  \n",
+    "Let's add batch normalization to every convolutional layer.  \n",
+    "While surfing the net and [discussion forums](https://www.reddit.com/r/MachineLearning/comments/67gonq/d_batch_normalization_before_or_after_relu/?rdt=63945), there are different opinions on whether to put the batchnorm layer **before** or **after** the relu.  \n",
     "- Batchnorm **before** non linearity: it generally performs better and it's often chosen;\n",
     "- Batchnorm **after** non linearity: regularize better the data in terms of internal covariate shift since relu's output is truncated to only positive values.  \n",
     "\n",
@@ -3223,7 +3239,7 @@
    },
    "source": [
     "## What if we freeze some layers?\n",
-    "So far we have fine-tuned our model from scratch, but our dataset made of fruit is quite simple and the pre-training on imagenet should have been enough for the model to extract valuable information from it. What we want to do is to freeze some layers and unfreeze some other to make the best use of transfer learning.   \n",
+    "So far we have fine-tuned every layer of our model, but our dataset made of fruit is quite simple and the pre-training on imagenet should have been enough for the model to extract valuable information from it. What we want to do is to freeze some layers and unfreeze some other to make the best use of transfer learning.   \n",
     "Our final experiment consists in 3 trials:\n",
     "- freeze everything but the fc layer;\n",
     "- freeze everything but layer4 and the fc layer;\n",
